# BayNet

./: .pre-commit-config.yaml  check_all.py  conftest.py  pyproject.toml  run_mypy.py  run_mypy_tests.py  run_pylint.py  run_pylint_tests.py  setup.py
.github/workflows/: continuous_integration.yml
baynet/: __init__.py  interventions.py  metrics.py  parameters.py  structure.py  structure_generation.py
baynet/utils/: DAG_pb2.py  dag_io.py  visualisation.py
tests/: test_metrics.py  test_odds_ratios.py  test_parameters.py  test_structure.py
